# ucp-shopping-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
scripts/: demo.sh  deploy-cloud-run.sh  dev.sh  smoke_tools.py
service/: README.md  pyproject.toml
service/src/ucp_shopping_agent/: __init__.py  agent.py  main.py  payment-handlers.json
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  payment-handlers.ts  styles.css  types.ts
web/tests/: payment-handlers.test.ts
