[project]
name = "ucp-shopping-agent"
version = "0.1.0"
description = "Standalone Google ADK buyer-side UCP shopping agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.116.0",
  "google-adk>=1.34.0,<2",
  "httpx>=0.28.1",
  "python-dotenv>=1.1.0",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
ucp-shopping-agent = "ucp_shopping_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
